@@ -9,5 +9,6 @@ pub mod table;
 pub mod table_column;
 pub mod table_constraint;
 pub mod table_index;
+pub mod table_policy;
 pub mod table_trigger;
 pub mod view;
