@@ -4,6 +4,7 @@ v1.0.4
                     - Added support for COMMENTS ON.
                     - Fixed handling of $$ delimiters in SQL routine bodies.
                     - Fixed handling of GENERATED STORED column changes.
+                    - Added support for TABLE POLICIES.
 
 2025-12-22      v1.0.3
 
